# PoseLib

./: .gitignore  README.md  benchmark.sh  debug.py  log.txt  runRANSAC.py  setup.py  visualResults.ipynb
PoseLib/: CMakeLists.txt  robust.cc  robust.h  types copy.h  types.h
PoseLib/HCsolvers/: beckup.h  homotopy_continuation copy.h  homotopy_continuation.h  homotopy_continuation2.h
PoseLib/HCsolvers/HCproblems/: HCproblem_base.h  absolute_fisheye.h
PoseLib/misc/: camera_models.cc  camera_models.h
PoseLib/robust/: ransac.cc  ransac.h  ransac_impl.h
PoseLib/robust/estimators/: absolute_pose.cc  absolute_pose.h
PoseLib/robust/optim/: jacobian_accumulator.h  lm_impl.h
PoseLib/solvers/: oskarsson_arxiv18.cc  oskarsson_arxiv18.h  p4pf_fisheye.cc  p4pf_fisheye.h  p4pf_fisheye_depth.cc  p4pfr.cc  p4pfr_planar.cc  p4pfr_planar.h  p5pf_fisheye.cc  p5pf_fisheye.h
benchmark/: CMakeLists.txt  benchmark.cc  benchmark.h  benchmark_debugHC.cc  benchmark_fisheye copy.cc  benchmark_fisheye.cc  problem_generator.cc  problem_generator.h
fisheye_experiments/: REFACTORING_SUMMARY.md  aggregate_ransac_results.py  runRANSAC.py  runRANSAC.sh  runRANSAC_refactored.py  runhloc.sh  runhloc_remove_covisibilty.py  runhloc_remove_neighbours.py  visualNumericalStability.ipynb  visualResults.ipynb  visulaizeRANSACErrors.ipynb  visulaizeRANSACErrorsAll.ipynb
fisheye_experiments/TestData/: RANSACresults_10.0_dict.pkl  loadDataAndResults.py  readme.md  runRANSAC.py
poselib.egg-info/: PKG-INFO
pybind/: helpers.h  pyposelib.cc
tests/: optim_absolute_test.cc  run_tests.cc
